create basic navbar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1 class="text-3xl font-bold underline">Hello world!</h1>
+<app-navbar></app-navbar>
+<main class="mx-12">
+  <div class="w-full h-96 bg-yellow-400"></div>
+</main>
+<router-outlet></router-outlet>
