funcionando com erro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <main class="mx-12">
-  <div class="w-full h-96 bg-yellow-400"></div>
+  <div class="w-full">
+    <router-outlet></router-outlet>
+  </div>
 </main>
-<router-outlet></router-outlet>
