--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -92,7 +92,7 @@
         />
       </svg>
     </div>
-    <div><span class="text-sm">AUTO GIRO - GARANTIAS</span></div>
+    <div><span class="text-sm">CLIENTES</span></div>
   </div>
   <div></div>
 </div>
