--- a/src/app/components/_client/client-detail/client-detail.component.html
+++ b/src/app/components/_client/client-detail/client-detail.component.html
@@ -7,16 +7,104 @@
       Cadastro de cliente
     </h1>
     <div class="flex flex-col gap-4">
-      <app-input
-        placeholder="Digite o nome do cliente"
-        [formControlName]="'firstName'"
-        >Nome:</app-input
+      <div
+        class="flex flex-col py-3 px-5 border-solid border-safra-neutral-300 border-[1px] rounded-xl"
       >
-      <app-input
-        placeholder="Digite o sobrenome do cliente"
-        [formControlName]="'lastName'"
-        >Sobrenome:</app-input
+        <label
+          class="text-safra-primary-500 text-sm bg-transparent"
+          for="firstName"
+          >Nome:</label
+        >
+        <input
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          type="text"
+          name="firstName"
+          id="firstName"
+          placeholder="Digite o nome do cliente"
+          formControlName="firstName"
+        />
+      </div>
+      <div
+        class="flex flex-col py-3 px-5 border-solid border-safra-neutral-300 border-[1px] rounded-xl"
       >
+        <label
+          class="text-safra-primary-500 text-sm bg-transparent"
+          for="lastName"
+          >Sobrenome:</label
+        >
+        <input
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          type="text"
+          name="lastName"
+          id="lastName"
+          placeholder="Digite o sobrenome do cliente"
+          formControlName="lastName"
+        />
+      </div>
+      <div
+        class="flex flex-col py-3 px-5 border-solid border-safra-neutral-300 border-[1px] rounded-xl"
+      >
+        <label class="text-safra-primary-500 text-sm bg-transparent" for="cpf"
+          >CPF:</label
+        >
+        <input
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          type="text"
+          name="cpf"
+          id="cpf"
+          placeholder="Digite o CPF do cliente"
+          formControlName="cpf"
+        />
+      </div>
+      <div
+        class="flex flex-col py-3 px-5 border-solid border-safra-neutral-300 border-[1px] rounded-xl"
+      >
+        <label
+          class="text-safra-primary-500 text-sm bg-transparent"
+          for="birthDate"
+          >Data de Nascimento:</label
+        >
+        <input
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          type="date"
+          name="birthDate"
+          id="birthDate"
+          placeholder="Digite a data de aniversário do cliente"
+          formControlName="birthDate"
+        />
+      </div>
+      <div
+        class="flex flex-col py-3 px-5 border-solid border-safra-neutral-300 border-[1px] rounded-xl"
+      >
+        <label
+          class="text-safra-primary-500 text-sm bg-transparent"
+          for="monthlyIncome"
+          >Renda Mensal:</label
+        >
+        <input
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          type="number"
+          name="monthlyIncome"
+          id="monthlyIncome"
+          placeholder="Digite a renda mensal do cliente"
+          formControlName="monthlyIncome"
+        />
+      </div>
+      <div
+        class="flex flex-col py-3 px-5 border-solid border-safra-neutral-300 border-[1px] rounded-xl"
+      >
+        <label class="text-safra-primary-500 text-sm bg-transparent" for="email"
+          >E-mail:</label
+        >
+        <input
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Digite o e-mail do cliente"
+          formControlName="email"
+        />
+      </div>
     </div>
     <div class="w-full flex flex-row justify-between">
       <app-button (buttonClick)="closeDialog.emit()">Fechar</app-button>
