--- a/src/app/components/_client/client-detail/client-detail.component.html
+++ b/src/app/components/_client/client-detail/client-detail.component.html
@@ -54,6 +54,7 @@
           id="cpf"
           placeholder="Digite o CPF do cliente"
           formControlName="cpf"
+          mask="000.000.000-00"
         />
       </div>
       <div
