input error class

--- a/src/app/components/_client/client-detail/client-detail.component.html
+++ b/src/app/components/_client/client-detail/client-detail.component.html
@@ -16,7 +16,7 @@
           >Nome:</label
         >
         <input
-          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 invalid:text-red-500"
           type="text"
           name="firstName"
           id="firstName"
@@ -33,7 +33,7 @@
           >Sobrenome:</label
         >
         <input
-          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 invalid:text-red-500"
           type="text"
           name="lastName"
           id="lastName"
@@ -48,7 +48,7 @@
           >CPF:</label
         >
         <input
-          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 invalid:text-red-500"
           type="text"
           name="cpf"
           id="cpf"
@@ -66,7 +66,7 @@
           >Data de Nascimento:</label
         >
         <input
-          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 invalid:text-red-500"
           type="date"
           name="birthDate"
           id="birthDate"
@@ -83,7 +83,7 @@
           >Renda Mensal:</label
         >
         <input
-          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 invalid:text-red-500"
           type="number"
           name="monthlyIncome"
           id="monthlyIncome"
@@ -98,7 +98,7 @@
           >E-mail:</label
         >
         <input
-          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 foc"
+          class="text-sm font-extralight text-safra-primary-900 bg-transparent mt-2 invalid:text-red-500"
           type="email"
           name="email"
           id="email"
