--- a/src/app/components/_client/client/client.component.html
+++ b/src/app/components/_client/client/client.component.html
@@ -3,7 +3,7 @@
     <h1 class="text-xl uppercase font-black">Clientes</h1>
   </div>
   <div class="flex flex-row justify-between">
-    <div class="bg-red-600 w-full">Filtros</div>
+    <div class=""></div>
     <div class="w-fit">
       <app-button (buttonClick)="registrationDialog.show()"
         >CADASTRAR NOVO CLIENTE</app-button
