adjust pagination buttons

--- a/src/app/components/_client/client-list/client-list.component.html
+++ b/src/app/components/_client/client-list/client-list.component.html
@@ -60,8 +60,8 @@
       {{ total }} <br />
       registros
     </div>
-    <button class="text-nowrap" (click)="nextPage()">▶ Próxima</button>
-    <button class="text-nowrap" (click)="lastPage()">⏭ Última</button>
+    <button class="text-nowrap" (click)="nextPage()">Próxima ▶</button>
+    <button class="text-nowrap" (click)="lastPage()">Última ⏭</button>
   </div>
 </div>
 
